# bi-cli

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix  install.sh  rust-toolchain.toml
.github/workflows/: release.yml
configs/: bi_scim_application.json  tenant_config.json
docs/: CommandLineHelp.md
migrations/: 20241028023603_init.sql  20241103013437_settings.sql
scoop/: bi.json  generate-scoop-manifest.sh
src/: bi_api_token.rs  bi_enrollment.rs  bi_external_sso.rs  bi_scim.rs  config.rs  error.rs  fast_migrate.rs  main.rs  okta_identity_provider.rs  okta_registration_attribute.rs  okta_routing_rule.rs  okta_scim.rs  onelogin_fast_migrate.rs  provision_existing_tenant.rs  tenant.rs
src/ai/: command.rs
src/beyond_identity/: admin.rs  api_token.rs  commands.rs  enrollment.rs  external_sso.rs  groups.rs  identities.rs  mod.rs  provision_existing_tenant.rs  resource_servers.rs  roles.rs  scim.rs  sso_configs.rs  tenant.rs  token.rs
src/beyond_identity/api/: commands.rs  mod.rs
src/beyond_identity/helper/: admin.rs  command.rs  enrollment.rs  external_sso.rs  groups.rs  identities.rs  mod.rs  roles.rs  scim.rs  (+2 more)
src/common/: command.rs  config.rs  error.rs  http.rs  mod.rs
src/config/: command.rs  mod.rs
src/okta/: command.rs  commands.rs  fast_migrate.rs  identity_provider.rs  mod.rs  registration_attribute.rs  routing_rule.rs  scim.rs
src/onelogin/: applications.rs  command.rs  commands.rs  fast_migrate.rs  groups.rs  identities.rs  mod.rs
src/vitalsource/: applications.rs  entra.rs  groups.rs  identities.rs  mod.rs  rollback.rs  token.rs
(+61 files in other folders)
