[package]
name = "bi"
version = "0.0.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
rand = "0.8"
webbrowser = "0.8.3"
regex = "1"
urlencoding = "2.1"
reqwest-middleware = { version = "0.3.3", features = ["json"] }
async-trait = "0.1.83"
http = "1.1.0"
anyhow = "1.0.89"
url = "2.2"
jsonwebtoken = "9.3.0"
strum = "0.26"
strum_macros = "0.26"
field_types = "1.1.0"
